Calculadora con fragmentos

--- a/CalculadoraFragment/res/values/strings.xml
+++ b/CalculadoraFragment/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="botonIgual">=</string>
     <string name="botonComa">.</string>
     <string name="botonDel">Del</string>
-    
+    <string name="botonx2">x2</string>
+    <string name="botonx3">x3</string>
+    <string name="botonParentIz">(</string>
+    <string name="botonParentDc">)</string>
 </resources>
