--- a/EarthQuake/res/values/strings.xml
+++ b/EarthQuake/res/values/strings.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <string name="app_name">EarthQuake</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="Ruta">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
 
 </resources>
