--- a/EarthQuakeContentProvider/res/values/strings.xml
+++ b/EarthQuakeContentProvider/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <string name="app_name">EarthQuake</string>
+    <string name="app_name">Earth Quake Provider</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="Ruta">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
